--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  
   <link rel="stylesheet" type="text/css" href="main.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@1,600&family=Raleway:wght@100&display=swap" rel="stylesheet">
   <meta charset="utf-8">
   <title>Freedom</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
   <div class="site">
-    <div class="quote">"The freedom of Mankind does not lie in the fact that can do what we want, but that we do not have to do that which we do not want."
-      </div>
-    <div class= "author">- Jean-Jacques Rousseau</div>
+    
+    <p class="quote">"The freedom of Mankind does not lie in the fact that can do what we want, but that we do not have to do that which we do not want."
+      </p>
+    <p class= "author">- <small><i>Jean-Jacques Rousseau</i></small></p>
   </div>
   </body>
 </html>
